[gd_scene load_steps=6 format=3 uid="uid://behcionwl8kfd"]

[ext_resource type="Script" uid="uid://duqinhsja38oy" path="res://Scenes/options_menu.gd" id="1_1jju4"]
[ext_resource type="Theme" uid="uid://dl6fvv3e5ioc0" path="res://GUI/MainTheme.tres" id="1_s3xhb"]
[ext_resource type="Texture2D" uid="uid://c26qatnkr8yc5" path="res://Assets/MenuBackgrounds/default.png" id="2_1jju4"]
[ext_resource type="PackedScene" uid="uid://dhjjqyovwuabw" path="res://Scenes/Objects/AliceaCoinDisplayObject.tscn" id="3_ayvsw"]
[ext_resource type="Texture2D" uid="uid://buc2vdfiatlxl" path="res://Assets/MenuBackgrounds/defaultNoButterflies.png" id="3_un4xt"]

[node name="OptionsMenu" type="Window"]
disable_3d = true
title = "Alicea Doro Interaction Menu"
initial_position = 1
size = Vector2i(500, 500)
transient = true
transient_to_focused = true
unresizable = true
theme = ExtResource("1_s3xhb")
script = ExtResource("1_1jju4")

[node name="InteractionMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 500.0
theme = ExtResource("1_s3xhb")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="InteractionMenu"]
texture_filter = 1
layout_mode = 0
offset_left = -8.0
offset_top = -9.0
offset_right = 507.0
offset_bottom = 507.0
texture = ExtResource("3_un4xt")
metadata/_edit_lock_ = true

[node name="AliceaCoinDisplayObject" parent="InteractionMenu" instance=ExtResource("3_ayvsw")]
layout_mode = 1
offset_left = 6.0
offset_top = 4.0
offset_right = -340.0
offset_bottom = -457.0

[node name="Settings" type="Button" parent="InteractionMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 416.0
offset_top = 452.0
offset_right = 486.0
offset_bottom = 483.0
text = "Settings"
metadata/_edit_lock_ = true

[node name="Shutdown" type="Button" parent="InteractionMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 312.0
offset_top = 452.0
offset_right = 399.0
offset_bottom = 483.0
tooltip_text = "Shuts this program down."
text = "Shutdown"
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="InteractionMenu"]
layout_mode = 0
offset_left = 4.0
offset_top = 48.0
offset_right = 496.0
offset_bottom = 438.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="InteractionMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="Feed" type="Button" parent="InteractionMenu/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The doro will get hungry overtime. You must feed the cute little doro with the correct food."
mouse_filter = 1
text = "Feed It"
metadata/_edit_lock_ = true

[node name="NukeSabotage" type="Button" parent="InteractionMenu/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Nuke Sabotage"
metadata/_edit_lock_ = true

[node name="Dorozon Shop" type="Button" parent="InteractionMenu/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Dorozon Shop"
metadata/_edit_lock_ = true

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 500.0
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="SettingsMenu"]
texture_filter = 1
layout_mode = 0
offset_left = -8.0
offset_top = -9.0
offset_right = 507.0
offset_bottom = 507.0
texture = ExtResource("2_1jju4")
metadata/_edit_lock_ = true

[node name="SettingExitButton" type="Button" parent="SettingsMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 74.0
offset_bottom = 34.0
text = "Back"
metadata/_edit_lock_ = true

[node name="SettingSaveButton" type="Button" parent="SettingsMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 95.0
offset_top = 3.0
offset_right = 165.0
offset_bottom = 34.0
text = "Save"
metadata/_edit_lock_ = true

[node name="DisplayConfigButton" type="Button" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.5
offset_top = -38.0
offset_right = 72.5
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
text = "Display Settings"
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenu"]
layout_mode = 0
offset_left = 4.0
offset_top = 47.0
offset_right = 496.0
offset_bottom = 452.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="InteractionMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="InteractionMenu/Shutdown" to="." method="_on_shutdown_pressed"]
[connection signal="pressed" from="InteractionMenu/ScrollContainer/VBoxContainer/Feed" to="." method="_on_feed_pressed"]
[connection signal="pressed" from="InteractionMenu/ScrollContainer/VBoxContainer/NukeSabotage" to="." method="_on_nuke_sabotage_pressed"]
[connection signal="pressed" from="InteractionMenu/ScrollContainer/VBoxContainer/Dorozon Shop" to="." method="_on_dorozon_shop_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingExitButton" to="." method="_on_setting_exit_button_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingSaveButton" to="." method="_on_setting_save_button_pressed"]
[connection signal="pressed" from="SettingsMenu/DisplayConfigButton" to="." method="_on_display_config_button_pressed"]
